--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "1.6.2",
     "bootstrap": "5.3.0",
     "cors": "2.8.5",
+    "dotenv": "^16.4.5",
     "elm-pep": "1.0.6",
     "express": "4.18.2",
     "jquery": "3.7.1",
